# pl-concepts-hw

./: README.md
FuturePromise/: Async.h  CMakeLists.txt  Future.inl  Promise.h  Promise.inl  State.inl  ThreadPool.cpp  ThreadPool.h
FuturePromise/Tests/: AsyncTest.cpp  CMakeLists.txt  FuturePromiseTest.cpp
hw-1/: README.md
hw-1/VNVM/: CMakeLists.txt  FullReadVNVMProvider.cpp  FullReadVNVMProvider.h  InstructionImplSample.cpp  VAS16.cpp  VAS16.h  VNProcess.cpp  VNProcess.h  fibonacci.dis.dis.vn  fibonacci.dis.vn  fibonacci.vn  main.cpp
hw-1/VNVM/Assemble/: VNAsm.cpp  VNAssembler.cpp  VNAssembler.h
hw-1/VNVM/Disassemble/: VNDasm.cpp  VNDisassembler.cpp  VNDisassembler.h
hw-1/VNVM/Framework/: CommonDefines.h  ExecutableProvider.h  Instruction.h  Process.h  RegistryProvider.h  Set.h  VirtualAddressSpace.h
hw-2/: CMakeLists.txt  Exception.cpp  Exception.h  Primitives.h  main.cpp
hw-3/: CMakeLists.txt  DataContainer.h  DataStream.h  Emitter.h  Flatten.h  GroupBy.h  OrderBy.h  Recurrent.h  Select.h  Take.h  Where.h
hw-3/Tests/: CMakeLists.txt  test.cpp
